--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -1,10 +1,10 @@
 {
-    "A fresh verification link has been sent to your email address.": "Un nouveau lien de vérification a été envoyé à votre adresse email (attendez quelques minutes avant de vérifier votre boîte aux lettres).",
+    "A fresh verification link has been sent to your email address.": "Un nouveau lien de vérification a été envoyé à votre adresse courriel (attendez quelques minutes avant de vérifier votre boîte aux lettres).",
     "All rights reserved.": "Tous droits réservés.",
     "Before proceeding, please check your email for a verification link.": "Avant de continuer, veuillez vérifier votre courrier électronique dans quelques minutes pour un lien de vérification.",
     "click here to request another": "cliquer ici pour faire une autre demande",
     "Confirm Password": "Confirmez le mot de passe",
-    "E-Mail Address": "Adresse email",
+    "E-Mail Address": "Adresse courriel",
     "Error": "Erreur",
     "Forbidden": "Interdit",
     "Forgot Your Password?": "vous avez oublié votre mot de passe ?",
@@ -12,7 +12,7 @@
     "Hello!": "Bonjour !",
     "hi": "salut",
     "If you did not create an account, no further action is required.": "Si vous n'avez pas créé de compte, aucune action supplémentaire n'est requise.",
-    "If you did not receive the email": "Si vous n'avez pas reçu l'email",
+    "If you did not receive the email": "Si vous n'avez pas reçu le courriel",
     "If you did not request a password reset, no further action is required.": "Si vous n'avez pas demandé de réinitialisation de mot de passe, aucune autre action n'est requise.",
     "If you’re having trouble clicking the \":actionText\" button, copy and paste the URL below\ninto your web browser: [:displayableActionUrl](:actionURL)": "Si vous avez des problèmes en cliquant sur le bouton \":actionText\", faites un copié/collé de l'url ci-dessous dans votre navigateur :\n [:displayableActionUrl](:actionURL)",
     "Invalid signature.": "Signature invalide",
@@ -24,7 +24,7 @@
     "Page Expired": "Page expirée",
     "Page Not Found": "Page non trouvée",
     "Password": "Mot de passe",
-    "Please click the button below to verify your email address.": "Veuillez cliquer sur le bouton ci-dessous pour vérifier votre adresse email.",
+    "Please click the button below to verify your email address.": "Veuillez cliquer sur le bouton ci-dessous pour vérifier votre adresse courriel.",
     "Please confirm your password before continuing.": "Veuillez confirmer votre mot de passe avant de continuer",
     "Regards": "Cordialement",
     "Register": "Inscription",
@@ -46,11 +46,11 @@
     "Too Many Attempts.": "Trop de tentatives.",
     "Too Many Requests": "Trop de requêtes",
     "Unauthorized": "Non autorisé",
-    "Verify Email Address": "Vérification de l'adresse email",
-    "Verify Your Email Address": "Vérifiez votre adresse email",
+    "Verify Email Address": "Vérification de l'adresse courriel",
+    "Verify Your Email Address": "Vérifiez votre adresse courriel",
     "We won't ask for your password again for a few hours.": "Nous ne vous demanderons plus votre mot de passe pour quelques heures",
     "Whoops!": "Oups !",
     "Whoops, something went wrong on our servers.": "Oups, quelque chose s'est mal passé sur nos serveurs.",
-    "You are receiving this email because we received a password reset request for your account.": "Vous recevez cet email car nous avons reçu une demande de réinitialisation de mot de passe pour votre compte.",
-    "Your email address is not verified.": "Votre adresse email n'a pas été vérifiée."
+    "You are receiving this email because we received a password reset request for your account.": "Vous recevez ce courriel car nous avons reçu une demande de réinitialisation de mot de passe pour votre compte.",
+    "Your email address is not verified.": "Votre adresse courriel n'a pas été vérifiée."
 }
